# UDV-Team-Map

./: .gitignore  Makefile  README.md  README.md.save  docker-compose.yml  index.html  package-lock.json
.github/workflows/: ci.yml
backend/: .gitignore  Dockerfile  pyproject.toml  setup.cfg
backend/alembic/: env.py
backend/app/: alembic.ini  enums.py  main.py  startup_checks.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 20251110_0935_93e7596dcdd9_initial.py  20251111_1128_447fc7fffa5f_update_user_model.py  20251111_1212_8f19d7b93e9b_legal_entities_and_departments.py  20251111_1623_747ef47b6f3b_edit_timestamp_mixin.py  20251113_1800_767fce0aaaa3_gin_index_search.py  20251120_1134_cb085172f4a8_add_skills.py  20251125_1715_d18c5343b334_avatar_add.py  20251126_1344_204fe28e594f_fix_avatar.py  20251126_1736_e6f0a24c4840_fix_user.py  41f0ca7af805_initial.py  85070abdd987_gin_index_search_edit.py  9eb8c9f2699d_update_user_and_department.py  b16083302cde_edit_user_position.py  d94ac54a929e_edit_gin_index.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: auth.py  department.py  employees.py  filters.py  legal_entity.py  skills.py
backend/app/core/: config.py  logger.py
backend/app/database/: session.py
backend/app/db/: base.py
backend/app/exceptions/: department.py  handlers.py  legal_entity.py  skill.py  user.py
backend/app/middlewares/: limit_upload.py
backend/app/models/: __init__.py  avatar.py  base.py  department.py  legal_entity.py  mixins.py  skills.py  user.py
backend/app/repositories/: avatar_repository.py  department_repository.py  legal_entity_repository.py  skill_repository.py  user_repository.py
backend/app/schemas/: auth.py  avatar.py  department.py  legal_entity.py  skill.py  user.py
backend/app/services/: auth_service.py  avatar_service.py  department_service.py  health_monitor.py  legal_entity_service.py  s3_service.py  skill_service.py  user_service.py
backend/app/test/: conftest.py  test_api.py
backend/app/utils/: auth.py  file_keys.py  tokens.py
docs/: README_GITFLOW.md
frontend/: .gitignore  Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
frontend/src/: App.jsx  index.css  index.jsx  main.jsx
frontend/src/components/: AdminEmployeeTable.tsx  EditNameModal.tsx  (+22 more)
nginx/: default.conf
prometheus/: prometheus.yml
src/components/: EmployeeCard.tsx  OrgChartNode.tsx
src/pages/: TeamMapPage.tsx
(+56 files in other folders)
